--- a/A03_SOMA_CODINGTEST/B_11_15/C15_D-16_260219.ipynb
+++ b/A03_SOMA_CODINGTEST/B_11_15/C15_D-16_260219.ipynb
@@ -48,50 +48,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(수학): 백준 1676 (팩토리얼 0의 개수) - https://www.acmicpc.net/problem/1676\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''10''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "\n",
+    "    def cnt_factor(num, p):\n",
+    "        count = 0\n",
+    "        while num > 0:\n",
+    "            count += num // p\n",
+    "            num //= p\n",
+    "\n",
+    "        return count\n",
+    "\n",
+    "    print(cnt_factor(N, 5))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. 알고(Map): 백준 19583 (싸이버개강파티) - https://www.acmicpc.net/problem/19583\n",
+    "# 3. 알고(Map): 백준 19583 (싸이버개강총회) - https://www.acmicpc.net/problem/19583\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''22:00 23:00 23:30\n",
+    "21:30 malkoring\n",
+    "21:33 tolelom\n",
+    "21:34 minjae705\n",
+    "21:35 hhan14\n",
+    "21:36 dicohy27\n",
+    "21:40 906bc\n",
+    "23:00 906bc\n",
+    "23:01 tolelom\n",
+    "23:10 minjae705\n",
+    "23:11 hhan14\n",
+    "23:20 dicohy27''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    S, E, Q = input().split()\n",
+    "\n",
+    "    start_set = set()\n",
+    "    attend_set = set()\n",
+    "\n",
+    "    def convert_minute(time_str):\n",
+    "        hour, min = map(int, time_str.split(':'))\n",
+    "        return hour*60 + min\n",
+    "\n",
+    "    start_time = convert_minute(S)\n",
+    "    end_time = convert_minute(E)\n",
+    "    stream_end = convert_minute(Q)\n",
+    "\n",
+    "    while True:\n",
+    "        temp = input().split()\n",
+    "        if not temp:\n",
+    "            break\n",
+    "        time, name = temp\n",
+    "\n",
+    "        time = convert_minute(time)\n",
+    "        if time <= start_time:\n",
+    "            start_set.add(name)\n",
+    "        elif end_time <= time <= stream_end and name in start_set:\n",
+    "            attend_set.add(name)\n",
+    "\n",
+    "    print(len(attend_set))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -99,23 +161,44 @@
    "execution_count": null,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(그리디): 백준 19941 (햄버거 분배) - https://www.acmicpc.net/problem/19941\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''20 1\n",
+    "HHPHPPHHPPHPPPHPHPHP''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, K = map(int, input().split())\n",
+    "    infos = list(input().rstrip())\n",
+    "\n",
+    "    for i, info in enumerate(infos):\n",
+    "        if info == 'P':\n",
+    "            start = i - K if i - K >= 0 else 0  # max(0, i - K)\n",
+    "            end = i + K if i + K < N else N - 1  # min(N - 1, i + K)\n",
+    "            for possible in range(start, end + 1):\n",
+    "                if infos[possible] == 'H':\n",
+    "                    infos[possible] = \"#\"\n",
+    "                    break\n",
+    "\n",
+    "    print(infos.count(\"#\"))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -126,6 +209,17 @@
     "```sql\n",
     "-- 5. SQL(Lv.2): 성분으로 구분한 아이스크림 총 주문량 \n",
     "-- https://school.programmers.co.kr/learn/courses/30/lessons/133026\n",
+    "SELECT\n",
+    "    II.INGREDIENT_TYPE,\n",
+    "    SUM(FH.TOTAL_ORDER) AS TOTAL_ORDER\n",
+    "FROM\n",
+    "    FIRST_HALF FH\n",
+    "JOIN\n",
+    "    ICECREAM_INFO II USING (FLAVOR)\n",
+    "GROUP BY\n",
+    "    II.INGREDIENT_TYPE\n",
+    "ORDER BY\n",
+    "    TOTAL_ORDER ASC;\n",
     "```"
    ]
   },
@@ -134,23 +228,101 @@
    "execution_count": null,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 17142 (연구소 3) - https://www.acmicpc.net/problem/17142\n",
     "import sys\n",
+    "from itertools import product, combinations\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''7 3\n",
+    "2 0 2 0 1 1 0\n",
+    "0 0 1 0 1 0 0\n",
+    "0 1 1 1 1 0 0\n",
+    "2 1 0 0 0 0 2\n",
+    "1 0 0 0 0 1 1\n",
+    "0 1 0 0 0 0 0\n",
+    "2 1 0 0 2 0 2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M = map(int, input().split())\n",
+    "    board = [list(map(int, input().split())) for _ in range(N)]\n",
+    "    directions = [(0, -1), (0, +1), (-1, 0), (+1, 0)]\n",
     "\n",
-    "    pass\n",
+    "    emptys_len = 0\n",
+    "    virus = []\n",
+    "    for r, c in product(range(N), repeat=2):\n",
+    "        val = board[r][c]\n",
+    "        if val == 0:\n",
+    "            emptys_len += 1\n",
+    "        if val == 2:\n",
+    "            virus.append((r, c))\n",
+    "\n",
+    "    # 활성 바이러스 좌표 받아서, 퍼트린 후 최대값 리턴, 좌표 0 set\n",
+    "    def activate_virus(active_list, best):\n",
+    "        max_val = 0\n",
+    "        remain_cnt = emptys_len\n",
+    "        visited = [[-1] * N for _ in range(N)]\n",
+    "        dq = deque()\n",
+    "\n",
+    "        for r, c, in active_list:\n",
+    "            dq.append((r, c))\n",
+    "            visited[r][c] = 0\n",
+    "\n",
+    "        while dq:\n",
+    "            r, c = dq.popleft()\n",
+    "            nxt_time = visited[r][c] + 1\n",
+    "\n",
+    "            for dr, dc in directions:\n",
+    "                nr, nc = r + dr, c + dc\n",
+    "\n",
+    "                if 0 <= nr < N and 0 <= nc < N and visited[nr][nc] == -1:\n",
+    "                    val = board[nr][nc]\n",
+    "\n",
+    "                    if val == 0:\n",
+    "                        if nxt_time >= best:    # Best 사례 있으면 종료.\n",
+    "                            return best, -1\n",
+    "\n",
+    "                        max_val = max(max_val, nxt_time)\n",
+    "                        remain_cnt -= 1\n",
+    "\n",
+    "                        if remain_cnt == 0:     # 남은 칸 없으면 종료.\n",
+    "                            return max_val, 0\n",
+    "\n",
+    "                        visited[nr][nc] = nxt_time\n",
+    "                        dq.append((nr, nc))\n",
+    "\n",
+    "                    elif val == 1:  # 벽\n",
+    "                        visited[nr][nc] = -2\n",
+    "\n",
+    "                    elif val == 2:    # 바이러스 활성\n",
+    "                        visited[nr][nc] = nxt_time\n",
+    "                        dq.append((nr, nc))\n",
+    "\n",
+    "        return max_val, remain_cnt\n",
+    "\n",
+    "    min_val = float('inf')\n",
+    "    for active_combi in combinations(virus, M):\n",
+    "        time, remain = activate_virus(active_combi, min_val)\n",
+    "        if remain == 0:\n",
+    "            min_val = min(min_val, time)\n",
+    "\n",
+    "    print(min_val if min_val != float('inf') else -1)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -158,47 +330,127 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 2631 (줄세우기) - https://www.acmicpc.net/problem/2631\n",
     "import sys\n",
+    "from bisect import bisect_left\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''7\n",
+    "3\n",
+    "7\n",
+    "5\n",
+    "2\n",
+    "6\n",
+    "1\n",
+    "4''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    nums = [int(input()) for _ in range(N)]\n",
     "\n",
-    "    pass\n",
+    "    # Longest Increasing Subsequence, 최장 증가 부분 수열\n",
+    "    LIS = list()\n",
+    "    for n in nums:\n",
+    "        insert_idx = bisect_left(LIS, n)\n",
+    "\n",
+    "        if insert_idx == len(LIS):\n",
+    "            LIS.append(n)\n",
+    "        else:\n",
+    "            LIS[insert_idx] = n\n",
+    "\n",
+    "    print(N - len(LIS))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(그래프): 백준 1197 (최소 스패닝 트리) - https://www.acmicpc.net/problem/1197\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 3\n",
+    "1 2 1\n",
+    "2 3 2\n",
+    "1 3 3''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    # Minimum Spanning Tree(최소 신장 트리) MST\n",
+    "    # 크루스칼(Kruskal) 알고리즘 + Union Find\n",
+    "    V, E = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    edges = list()\n",
+    "    parent = list(range(V + 1))\n",
+    "    size = [1] * (V + 1)\n",
+    "\n",
+    "    for _ in range(E):\n",
+    "        a, b, cost = map(int, input().split())\n",
+    "        edges.append((cost, a, b))\n",
+    "\n",
+    "    def find(v):\n",
+    "        if parent[v] != v:\n",
+    "            parent[v] = find(parent[v])\n",
+    "        return parent[v]\n",
+    "\n",
+    "    def union(ra, rb, cost):\n",
+    "        nonlocal total_cost, edge_cnt\n",
+    "\n",
+    "        size_a = size[ra]\n",
+    "        size_b = size[rb]\n",
+    "\n",
+    "        if size_a > size_b:  # 작은쪽을 a 로 고정 (오름차순)\n",
+    "            ra, rb = rb, ra  # a길이가 크면 교환\n",
+    "\n",
+    "        parent[ra] = rb\n",
+    "        size[rb] += size[ra]  # 커진 노드 사이즈 증가.\n",
+    "\n",
+    "        edge_cnt += 1\n",
+    "        total_cost += cost  # 두 노드 합치고 비용 추가.\n",
+    "\n",
+    "    edge_cnt = 0    # 연결한 간선 수\n",
+    "    total_cost = 0\n",
+    "\n",
+    "    for cost, a, b, in sorted(edges):\n",
+    "        ra, rb = find(a), find(b)\n",
+    "        if ra != rb:  # 합쳐지지 않은 간선이면\n",
+    "            union(ra, rb, cost)\n",
+    "            if edge_cnt == V - 1:  # 연결한 간선 수 연결 다 되면 종료.\n",
+    "                break\n",
+    "\n",
+    "    print(total_cost)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -206,23 +458,90 @@
    "execution_count": null,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "143628579\n",
+      "572139468\n",
+      "986754231\n",
+      "391542786\n",
+      "468917352\n",
+      "725863914\n",
+      "237481695\n",
+      "619275843\n",
+      "854396127\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 2239 (스도쿠) - https://www.acmicpc.net/problem/2239\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''103000509\n",
+    "002109400\n",
+    "000704000\n",
+    "300502006\n",
+    "060000050\n",
+    "700803004\n",
+    "000401000\n",
+    "009205800\n",
+    "804000107''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    board = [list(map(int, input().rstrip())) for _ in range(9)]\n",
+    "    zeros = list()\n",
+    "    need_serch = True\n",
+    "\n",
+    "    row_i = [[False] * 10 for _ in range(9)]\n",
+    "    col_i = [[False] * 10 for _ in range(9)]\n",
+    "    sqr_i = [[False] * 10 for _ in range(9)]\n",
+    "\n",
+    "    for r, c in product(range(9), repeat=2):\n",
+    "        num = board[r][c]\n",
+    "        if num == 0:\n",
+    "            zeros.append((r, c))\n",
+    "        else:\n",
+    "            s = (r // 3) * 3 + c // 3   # 인덱스 계산\n",
+    "\n",
+    "            row_i[r][num] = True\n",
+    "            col_i[c][num] = True\n",
+    "            sqr_i[s][num] = True\n",
+    "\n",
+    "    def dfs(zero_idx):\n",
+    "        nonlocal need_serch\n",
+    "\n",
+    "        if not need_serch:  # sys.exit(0) 사용안함\n",
+    "            return\n",
+    "\n",
+    "        if zero_idx == len(zeros):\n",
+    "            print(\"\\n\".join(\"\".join(map(str, row)) for row in board))\n",
+    "            need_serch = False\n",
+    "            return\n",
+    "\n",
+    "        r, c = zeros[zero_idx]\n",
+    "        s = (r // 3) * 3 + c // 3\n",
+    "        for n in range(1, 10):\n",
+    "            if not row_i[r][n] and not col_i[c][n] and not sqr_i[s][n]:\n",
+    "                row_i[r][n], col_i[c][n], = True, True\n",
+    "                sqr_i[s][n], board[r][c] = True, n\n",
+    "\n",
+    "                dfs(zero_idx + 1)\n",
+    "\n",
+    "                row_i[r][n], col_i[c][n], = False, False\n",
+    "                sqr_i[s][n], board[r][c] = False, 0\n",
+    "\n",
+    "    dfs(0)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -232,14 +551,57 @@
    "source": [
     "```sql\n",
     "-- 5. SQL(Lv.4): 자동차 대여 기록 별 대여 금액 구하기 \n",
-    "-- https://school.programmers.co.kr/learn/courses/30/lessons/157338\n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/151141\n",
+    "WITH \n",
+    "    CF AS (\n",
+    "        SELECT\n",
+    "            CAR_ID,\n",
+    "            DAILY_FEE\n",
+    "        FROM CAR_RENTAL_COMPANY_CAR \n",
+    "        WHERE CAR_TYPE = '트럭'\n",
+    "    ),\n",
+    "    CH AS (\n",
+    "        SELECT\n",
+    "            HISTORY_ID,\n",
+    "            CAR_ID,\n",
+    "            DATEDIFF(END_DATE, START_DATE) + 1 AS DAY,\n",
+    "            CASE\n",
+    "                WHEN 90 <= DATEDIFF(END_DATE, START_DATE) + 1 THEN 90\n",
+    "                WHEN 30 <= DATEDIFF(END_DATE, START_DATE) + 1 THEN 30\n",
+    "                WHEN  7 <= DATEDIFF(END_DATE, START_DATE) + 1 THEN 7\n",
+    "                ELSE NULL\n",
+    "            END                \n",
+    "            AS DT_ID\n",
+    "        FROM CAR_RENTAL_COMPANY_RENTAL_HISTORY\n",
+    "    ),\n",
+    "    DP AS (\n",
+    "        SELECT\n",
+    "            CASE\n",
+    "                WHEN DURATION_TYPE = '7일 이상' THEN 7\n",
+    "                WHEN DURATION_TYPE = '30일 이상' THEN 30\n",
+    "                WHEN DURATION_TYPE = '90일 이상' THEN 90\n",
+    "            END AS DT_ID,\n",
+    "            DISCOUNT_RATE\n",
+    "        FROM CAR_RENTAL_COMPANY_DISCOUNT_PLAN \n",
+    "        WHERE CAR_TYPE = '트럭'\n",
+    "    )\n",
+    "    \n",
+    "SELECT\n",
+    "    HISTORY_ID,\n",
+    "    (DAILY_FEE * (100 - IFNULL(DISCOUNT_RATE, 0) )) DIV 100 * DAY AS FEE\n",
+    "FROM CF\n",
+    "JOIN CH USING (CAR_ID)\n",
+    "LEFT JOIN DP USING (DT_ID)\n",
+    "ORDER BY\n",
+    "    FEE DESC,\n",
+    "    HISTORY_ID DESC;\n",
     "```"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
