--- a/A03_SOMA_CODINGTEST/B_11_15/C11_D-20_260215.ipynb
+++ b/A03_SOMA_CODINGTEST/B_11_15/C11_D-20_260215.ipynb
@@ -566,7 +566,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
@@ -580,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
