--- a/A03_SOMA_CODINGTEST/B_16_20/C16_D-15_260220.ipynb
+++ b/A03_SOMA_CODINGTEST/B_16_20/C16_D-15_260220.ipynb
@@ -5,23 +5,72 @@
    "execution_count": null,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28 27 26 25\n",
+      "22 9 15 19\n",
+      "16 8 21 13\n",
+      "10 14 20 7\n",
+      "4 3 2 1\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 16926 (배열 돌리기 1) - https://www.acmicpc.net/problem/16926\n",
     "import sys\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 4 7\n",
+    "1 2 3 4\n",
+    "7 8 9 10\n",
+    "13 14 15 16\n",
+    "19 20 21 22\n",
+    "25 26 27 28''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M, R = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    board = [list(input().split()) for _ in range(N)]\n",
+    "    directions = [(+1, 0), (0, +1), (-1, 0), (0, -1)]\n",
+    "\n",
+    "    for layer in range(min(N, M) // 2):\n",
+    "        sr, er = 0 + layer, N - 1 - layer   # 경계 값\n",
+    "        sc, ec = 0 + layer, M - 1 - layer\n",
+    "\n",
+    "        r, c = sr, sc\n",
+    "        row_col = list()\n",
+    "        value_dq = deque()\n",
+    "\n",
+    "        d = 0\n",
+    "        while True:\n",
+    "            dr, dc = directions[d]\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "            if sr <= nr <= er and sc <= nc <= ec:\n",
+    "                row_col.append((nr, nc))\n",
+    "                value_dq.append(board[nr][nc])\n",
+    "\n",
+    "                r, c = nr, nc\n",
+    "                if (r, c) == (sr, sc):              # 시작위치 오면 탈출\n",
+    "                    break\n",
+    "            else:\n",
+    "                d = (d + 1) % 4\n",
+    "\n",
+    "        value_dq.rotate(R)                           # 회전 시킨 값\n",
+    "        for new_r, new_c in row_col:\n",
+    "            board[new_r][new_c] = value_dq.popleft()\n",
+    "\n",
+    "    for row in board:\n",
+    "        print(*row)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -31,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 1748 (수 이어 쓰기 1) - https://www.acmicpc.net/problem/1748\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -55,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 5568 (카드 놓기) - https://www.acmicpc.net/problem/5568\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -79,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 1092 (배) - https://www.acmicpc.net/problem/1092\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -102,7 +151,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.2): 조건에 맞는 도서와 저자 리스트 출력하기 - https://school.programmers.co.kr/learn/courses/30/lessons/144854\n",
     "```"
    ]
   },
@@ -113,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 16236 (아기 상어) - https://www.acmicpc.net/problem/16236\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -137,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 11055 (가장 큰 증가하는 부분 수열) - https://www.acmicpc.net/problem/11055\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -161,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 17396 (백도어) - https://www.acmicpc.net/problem/17396\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -185,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(백트래킹): 백준 1405 (미친 로봇) - https://www.acmicpc.net/problem/1405\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -208,14 +257,28 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.3): 없어진 기록 찾기 - https://school.programmers.co.kr/learn/courses/30/lessons/59042\n",
     "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
