--- a/A03_SOMA_CODINGTEST/B_16_20/C16_D-15_260220.ipynb
+++ b/A03_SOMA_CODINGTEST/B_16_20/C16_D-15_260220.ipynb
@@ -75,24 +75,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61\n",
+      "digit_cnt=2 90\n",
+      "digit_cnt=1 10\n",
+      "251\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(수학): 백준 1748 (수 이어 쓰기 1) - https://www.acmicpc.net/problem/1748\n",
     "import sys\n",
+    "from math import log10\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''120''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
     "\n",
+    "    digit_cnt = int(log10(N))\n",
+    "    N = N - 10**digit_cnt\n",
+    "    cnt_val = N * (digit_cnt + 1) + 1\n",
+    "    print(cnt_val)\n",
+    "    while digit_cnt > 0:\n",
+    "        print(f\"{digit_cnt=}\", 10**digit_cnt - 10*(digit_cnt-1))\n",
+    "        cnt_val += (10**digit_cnt - 10*(digit_cnt-1))*digit_cnt\n",
+    "        digit_cnt -= 1\n",
+    "\n",
+    "    print(cnt_val)\n",
     "\n",
     "solve()\n"
    ]
@@ -102,7 +124,18 @@
    "execution_count": null,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.12.3' requires the ipykernel package.\n",
+      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(Map): 백준 5568 (카드 놓기) - https://www.acmicpc.net/problem/5568\n",
     "import sys\n",
@@ -264,7 +297,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "251117_MathForPython",
+   "display_name": ".venv (3.13.9)",
    "language": "python",
    "name": "python3"
   },
