--- a/A03_SOMA_CODINGTEST/B_11_15/C15_D-16_260219.ipynb
+++ b/A03_SOMA_CODINGTEST/B_11_15/C15_D-16_260219.ipynb
@@ -601,7 +601,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "251117_MathForPython",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -615,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
