--- a/A03_SOMA_CODINGTEST/B_16_20/C16_D-15_260220.ipynb
+++ b/A03_SOMA_CODINGTEST/B_16_20/C16_D-15_260220.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "5f85729d",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
      "output_type": "stream",
      "text": [
       "61\n",
-      "digit_cnt=2 90\n",
+      "digit_cnt=2 180\n",
       "digit_cnt=1 10\n",
       "251\n"
      ]
@@ -110,7 +110,7 @@
     "    cnt_val = N * (digit_cnt + 1) + 1\n",
     "    print(cnt_val)\n",
     "    while digit_cnt > 0:\n",
-    "        print(f\"{digit_cnt=}\", 10**digit_cnt - 10*(digit_cnt-1))\n",
+    "        print(f\"{digit_cnt=}\", (10**digit_cnt - 10*(digit_cnt-1))*digit_cnt)\n",
     "        cnt_val += (10**digit_cnt - 10*(digit_cnt-1))*digit_cnt\n",
     "        digit_cnt -= 1\n",
     "\n",
