--- a/A03_SOMA_CODINGTEST/B_16_20/C16_D-15_260220.ipynb
+++ b/A03_SOMA_CODINGTEST/B_16_20/C16_D-15_260220.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "5f85729d",
    "metadata": {},
    "outputs": [
@@ -83,17 +83,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "61\n",
-      "digit_cnt=2 180\n",
-      "digit_cnt=1 10\n",
-      "251\n"
+      "252\n"
      ]
     }
    ],
    "source": [
     "# 2. 알고(수학): 백준 1748 (수 이어 쓰기 1) - https://www.acmicpc.net/problem/1748\n",
     "import sys\n",
-    "from math import log10\n",
     "\n",
     "from io import StringIO\n",
     "sys.stdin = StringIO('''120''')\n",
@@ -102,21 +98,23 @@
     "\n",
     "\n",
     "def solve():\n",
+    "\n",
     "    N = int(input())\n",
+    "    answer = 0\n",
+    "\n",
+    "    start = 1\n",
+    "    length = 1\n",
+    "\n",
+    "    while start <= N:    # n자리수 * ( n자리수 중 가장 큰 수 - 가장 작은 수 +1 )\n",
+    "        end = min(N, 10**length - 1)\n",
+    "        answer += length * (end - start + 1)\n",
+    "        start *= 10\n",
+    "        length += 1\n",
+    "\n",
+    "    print(answer)\n",
     "\n",
     "\n",
-    "    digit_cnt = int(log10(N))\n",
-    "    N = N - 10**digit_cnt\n",
-    "    cnt_val = N * (digit_cnt + 1) + 1\n",
-    "    print(cnt_val)\n",
-    "    while digit_cnt > 0:\n",
-    "        print(f\"{digit_cnt=}\", (10**digit_cnt - 10*(digit_cnt-1))*digit_cnt)\n",
-    "        cnt_val += (10**digit_cnt - 10*(digit_cnt-1))*digit_cnt\n",
-    "        digit_cnt -= 1\n",
-    "\n",
-    "    print(cnt_val)\n",
-    "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -126,56 +124,100 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.12.3' requires the ipykernel package.\n",
-      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68\n"
      ]
     }
    ],
    "source": [
     "# 3. 알고(Map): 백준 5568 (카드 놓기) - https://www.acmicpc.net/problem/5568\n",
     "import sys\n",
+    "from itertools import permutations\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6\n",
+    "3\n",
+    "72\n",
+    "2\n",
+    "12\n",
+    "7\n",
+    "2\n",
+    "1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    n, k = int(input()), int(input())\n",
+    "    nums = (input().rstrip() for _ in range(n))\n",
+    "\n",
+    "    answers = {\"\".join(p) for p in permutations(nums, k)}\n",
+    "    print(len(answers))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(그리디): 백준 1092 (배) - https://www.acmicpc.net/problem/1092\n",
     "import sys\n",
+    "from bisect import bisect\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "6 8 9\n",
+    "5\n",
+    "2 5 2 4 7''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    crains = sorted(map(int, input().split()), reverse=True)\n",
     "\n",
-    "    pass\n",
+    "    M = int(input())\n",
+    "    weights = sorted(map(int, input().split()))\n",
+    "\n",
+    "    if crains[0] < weights[-1]:  # 제일 강한 크레인이 못드는 무게가 있으면\n",
+    "        print(-1)\n",
+    "        return\n",
+    "\n",
+    "    time = 0\n",
+    "    while weights:\n",
+    "\n",
+    "        for i, can in enumerate(crains):\n",
+    "            can_move_idx = bisect(weights, can)  # 2진 탐색\n",
+    "\n",
+    "            if can_move_idx == 0:   # 들 수 있는 무게가 없을 때\n",
+    "                del crains[i:]      # 이후 크레인 모두 제거\n",
+    "                break\n",
+    "            \n",
+    "            else:\n",
+    "                del weights[can_move_idx-1]  # 들 수 있는 무게 중 가장 무거운거 제거\n",
+    "\n",
+    "        time += 1\n",
+    "    print(time)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -184,7 +226,24 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- 5. SQL(Lv.2): 조건에 맞는 도서와 저자 리스트 출력하기 - https://school.programmers.co.kr/learn/courses/30/lessons/144854\n",
+    "-- 5. SQL(Lv.2): 조건에 맞는 도서와 저자 리스트 출력하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/144854\n",
+    "WITH\n",
+    "    CG AS (\n",
+    "        SELECT\n",
+    "            BOOK_ID,\n",
+    "            AUTHOR_ID,\n",
+    "            PUBLISHED_DATE\n",
+    "        FROM BOOK\n",
+    "        WHERE CATEGORY = '경제'\n",
+    "    )\n",
+    "SELECT\n",
+    "    CG.BOOK_ID,\n",
+    "    A.AUTHOR_NAME,\n",
+    "    DATE_FORMAT(CG.PUBLISHED_DATE, '%Y-%m-%d') AS PUBLISHED_DATE\n",
+    "FROM CG\n",
+    "JOIN AUTHOR A USING (AUTHOR_ID)\n",
+    "ORDER BY PUBLISHED_DATE ASC;\n",
     "```"
    ]
   },
@@ -193,47 +252,144 @@
    "execution_count": null,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 16236 (아기 상어) - https://www.acmicpc.net/problem/16236\n",
     "import sys\n",
+    "from heapq import heappush, heappop\n",
+    "from itertools import product\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6\n",
+    "6 0 6 0 6 1\n",
+    "0 0 0 0 0 2\n",
+    "2 3 4 5 6 6\n",
+    "0 0 0 0 0 2\n",
+    "0 2 0 0 0 0\n",
+    "3 9 3 0 0 1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    board = [list(map(int, input().split())) for _ in range(N)]\n",
+    "    directions = [(0, +1), (0, -1), (+1, 0), (-1, 0)]\n",
+    "\n",
+    "    baby = [2, 0, 0, 0]   # 크기, r, c, 먹은 물고기 수\n",
+    "\n",
+    "    for r, c in product(range(N), repeat=2):\n",
+    "        value = board[r][c]\n",
+    "        if value == 9:\n",
+    "            baby[1:3] = r, c\n",
+    "            board[r][c] = 0         # 제거 안하면 벽이 되어버림\n",
+    "\n",
+    "    time = 0\n",
+    "    while True:    # 크기가 가장 작은 물고기가 사냥 가능하다면\n",
+    "        b_size, br, bc, eat_cnt = baby\n",
+    "\n",
+    "        # 아기 위치 기준으로 사냥 가능한 물고기 거리 측정, BFS\n",
+    "        min_dist = [[-1] * N for _ in range(N)]\n",
+    "        target_fishs = list()\n",
+    "\n",
+    "        dq = deque([(br, bc)])\n",
+    "        min_dist[br][bc] = 0\n",
+    "\n",
+    "        best_min_dist = float('inf')\n",
+    "        while dq:\n",
+    "            r, c = dq.popleft()\n",
+    "            nxt_dist = min_dist[r][c] + 1\n",
+    "\n",
+    "            if nxt_dist > best_min_dist:    # 최단거리까지만 탐색\n",
+    "                break\n",
+    "\n",
+    "            for dr, dc in directions:\n",
+    "                nr, nc = r + dr, c + dc\n",
+    "                if 0 <= nr < N and 0 <= nc < N and min_dist[nr][nc] == -1:\n",
+    "                    val = board[nr][nc]\n",
+    "                    if val <= b_size:  # 사이즈가 아기보다 작거나 같으면 무시 하고 진행\n",
+    "                        dq.append((nr, nc))\n",
+    "\n",
+    "                        min_dist[nr][nc] = nxt_dist\n",
+    "\n",
+    "                        if 0 < board[nr][nc] < b_size:  # 먹을 수 있다면 후보 선정\n",
+    "                            heappush(target_fishs, (nxt_dist,  nr, nc))\n",
+    "\n",
+    "                            if best_min_dist == float('inf'):   # 한번만 갱신\n",
+    "                                best_min_dist == nxt_dist\n",
+    "\n",
+    "        if not target_fishs:        # 후보 없으면 종료\n",
+    "            break\n",
+    "\n",
+    "        eat_dist, er, ec = heappop(target_fishs)  # 제일 앞에 것 이 타겟.\n",
+    "\n",
+    "        time += eat_dist  # 거리 만큼 시간 쓰고\n",
+    "        eat_cnt += 1      # 먹은 수 증가\n",
+    "        board[er][ec] = 0\n",
+    "\n",
+    "        if eat_cnt == b_size:      # 현재 사이즈 만큼 먹었으면\n",
+    "            eat_cnt = 0            # 먹은 수 갱신\n",
+    "            b_size += 1            # 성장\n",
+    "\n",
+    "        baby = b_size, er, ec, eat_cnt      # 아기 정보 갱신\n",
+    "\n",
+    "    print(time)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "113\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 11055 (가장 큰 증가하는 부분 수열) - https://www.acmicpc.net/problem/11055\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''10\n",
+    "1 100 2 50 60 3 5 6 7 8''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    A = list(map(int, input().split()))\n",
+    "\n",
+    "    dp = A[:]\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        for j in range(i):\n",
+    "            if A[j] < A[i]:\n",
+    "                dp[i] = max(dp[i], dp[j] + A[i])\n",
+    "\n",
+    "    print(max(dp))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -241,23 +397,69 @@
    "execution_count": null,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(그래프): 백준 17396 (백도어) - https://www.acmicpc.net/problem/17396\n",
     "import sys\n",
+    "from heapq import heappop, heappush\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 7\n",
+    "0 0 0 1 1\n",
+    "0 1 7\n",
+    "0 2 2\n",
+    "1 2 4\n",
+    "1 3 3\n",
+    "1 4 6\n",
+    "2 3 2\n",
+    "3 4 1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M = map(int, input().split())\n",
+    "    vision = list(map(int, input().split()))\n",
+    "    vision[N-1] = 0\n",
     "\n",
-    "    pass\n",
+    "    graph = [[] for _ in range(N)]\n",
+    "    for _ in range(M):\n",
+    "        a, b, c = map(int, input().split())\n",
+    "        if vision[a] == 0 and vision[b] == 0:\n",
+    "            graph[a].append((b, c))\n",
+    "            graph[b].append((a, c))\n",
+    "\n",
+    "    min_time = [float('inf')] * N\n",
+    "    pq = [(0, 0)]  # (시간, 분기점)\n",
+    "    min_time[0] = 0\n",
+    "\n",
+    "    while pq:\n",
+    "        cur_time, cur = heappop(pq)\n",
+    "\n",
+    "        if cur == N - 1:\n",
+    "            break\n",
+    "\n",
+    "        if cur_time > min_time[cur]:\n",
+    "            continue\n",
+    "\n",
+    "        for nxt, cost in graph[cur]:\n",
+    "            nxt_time = cur_time + cost\n",
+    "            if nxt_time < min_time[nxt]:\n",
+    "                min_time[nxt] = nxt_time\n",
+    "                heappush(pq, (nxt_time, nxt))\n",
+    "\n",
+    "    print(min_time[N-1] if min_time[N-1] != float('inf') else -1)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -265,23 +467,58 @@
    "execution_count": null,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.008845493197441101\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 1405 (미친 로봇) - https://www.acmicpc.net/problem/1405\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''14 25 25 25 25''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    # 동, 서, 남, 북\n",
+    "    N, e, w, s, n = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    probs = [e/100, w/100, s/100, n/100]\n",
+    "    directions = [(0, +1), (0, -1), (+1, 0), (-1, 0)]\n",
+    "\n",
+    "    visited = {(0, 0)}\n",
+    "    answer = 0.0\n",
+    "\n",
+    "    def dfs(step, r, c, p):\n",
+    "        nonlocal answer\n",
+    "\n",
+    "        if step == N:\n",
+    "            answer += p\n",
+    "            return\n",
+    "\n",
+    "        for i, (dr, dc) in enumerate(directions):\n",
+    "\n",
+    "            if probs[i] == 0:   # 이동할 가능성 없는 경우 제외\n",
+    "                continue\n",
+    "\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "            if (nr, nc) not in visited:\n",
+    "                visited.add((nr, nc))    # 진행방향의 확률을 누적해서 곱해 줌\n",
+    "                dfs(step + 1, nr, nc, p * probs[i])\n",
+    "                visited.remove((nr, nc))\n",
+    "\n",
+    "    dfs(0, 0, 0, 1.0)\n",
+    "    print(answer)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -290,14 +527,26 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "-- 5. SQL(Lv.3): 없어진 기록 찾기 - https://school.programmers.co.kr/learn/courses/30/lessons/59042\n",
+    "-- 5. SQL(Lv.3): 없어진 기록 찾기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/59042\n",
+    "SELECT\n",
+    "    ANIMAL_ID,\n",
+    "    AO.NAME\n",
+    "FROM \n",
+    "    ANIMAL_OUTS AO\n",
+    "LEFT JOIN \n",
+    "    ANIMAL_INS AI USING (ANIMAL_ID)\n",
+    "WHERE \n",
+    "    AI.DATETIME IS NULL\n",
+    "ORDER BY\n",
+    "    ANIMAL_ID ASC;\n",
     "```"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
